Fix image alignment in desktop modal

--- a/templates/style/style.sass
+++ b/templates/style/style.sass
@@ -127,9 +127,6 @@ a:hover
   justify-content: space-between
   background-color: #000
 
-  #modal-slide-center
-    width: calc(100vw - $metadata-width)
-
   .slide-container
     display: flex
     width: 100vw
@@ -137,6 +134,7 @@ a:hover
     justify-content: space-between
 
     .slide
+      width: calc(100vw - $metadata-width)
       display: flex
       flex-direction: column
       justify-content: space-between
